--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="enemy_ship" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enemy_ship.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Space_Ship" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\baoyzx---space-ship.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
