--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -136,4 +136,19 @@
   <data name="SpaceGame2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SpaceGame2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="level1_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\level1_bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="level2_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\level2_bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="level3_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\level3_bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu_bg1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menu_bg1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="starry_sky_night" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\starry-sky-night.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
