Made ship move more smoothly

--- a/MSpaceInvaders/MSpaceInvaders/Form1.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Form1.resx
@@ -126,6 +126,12 @@
   <metadata name="enemyMovement.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>200, 18</value>
   </metadata>
+  <metadata name="mvLeft.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>347, 18</value>
+  </metadata>
+  <metadata name="mvRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>435, 18</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
