--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -151,4 +151,13 @@
   <data name="starry_sky_night" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\starry-sky-night.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="computer_key_Arrow_Left_T" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer_key_Arrow_Left_T.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="computer_key_Arrow_Right_T" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer_key_Arrow_Right_T.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="heart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\heart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
