--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -160,4 +160,16 @@
   <data name="heart" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\heart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="computer_key_Esc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer_key_Esc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="computer_key_Space_bar_T" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer_key_Space_bar_T.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="New_Piskel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\New Piskel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="upgradebox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upgradebox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
