--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -172,4 +172,25 @@
   <data name="upgradebox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\upgradebox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="collect_gift" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\collect_gift.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="enemy_shoot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enemy_shoot.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="get_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\get_hit.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="igm_music" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\igm_music.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="player_shoot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\player_shoot.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="roundysh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\roundysh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ship5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ship5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
