--- a/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
+++ b/MSpaceInvaders/MSpaceInvaders/Properties/Resources.resx
@@ -193,4 +193,10 @@
   <data name="ship5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ship5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ship51" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ship5.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ship5_hit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ship5_hit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
